#14 Changed to jre8